--- a/app/tomato-announcements/tomato-announcements-home.html
+++ b/app/tomato-announcements/tomato-announcements-home.html
@@ -1,15 +1,10 @@
-<section class="container-fluid">
-    <tomato-loading-indicator 
-      ng-if="vm.loading" 
-      text="Fetching announcements details..."
-    />
-    
-    <div class="row">
-        <div class="col-xs-12 col-sm-8">
-            <tomato-announcement-feed 
-            announcements="vm.announcemnets" 
-            announcementsOwners = "vm.announcemnetsOwners"
-            />
+<section class="container-fluid">   
+        <div class="row" ng-if="vm.loading">
+            <div class="col-xs-12 col-sm-8">            
+                <tomato-announcement-feed 
+                announcements="vm.announcements" 
+                announcements-owners = "vm.announcementsOwners"
+                />
+            </div>
         </div>
-    </div>
 </section>
